--- a/src/theme/_var.scss
+++ b/src/theme/_var.scss
@@ -36,8 +36,8 @@ $text-button-mini-font-size: 12px;
 
 // Table
 $table-padding: 12px;
-$table-row-min-height: 60px;
-$table-cell-padding-v: 16px;
+$table-row-min-height: 58px;
+$table-cell-padding-v: 15px;
 $table-cell-padding-h: 10px;
 
 // Sort
